--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
 body {
+    padding-top: 20px;
     background-image: url("coffee.png");
     background-size: cover;
     font-family:'Open Sans', 'Helvetica Neue', sans-serif;
